@@ -1,6 +1,8 @@
 20040823
  - (djm) [ssh-rand-helper.c] Typo. Found by 
    Martin.Kraemer AT Fujitsu-Siemens.com
+ - (djm) [loginrec.c] Typo and bad args in error messages; Spotted by 
+   Martin.Kraemer AT Fujitsu-Siemens.com
 
 20040817
  - (dtucker) [regress/README.regress] Note compatibility issues with GNU head.
